# game.libretro.quicknes

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/quicknes/: CMakeLists.txt  quicknes.txt
game.libretro.quicknes/: addon.xml  addon.xml.in
gameclient.quicknes/: addon.xml
